tests/baselines/reference/mergedDeclarations7.errors.txt
tests/cases/compiler/test.ts(4,5): error TS2322: Type 'PassportStatic' is not assignable to type 'Passport'.
  The types returned by 'use()' are incompatible between these types.
    Type 'PassportStatic' is not assignable to type 'this'.
      'this' could be instantiated with an arbitrary type which could be unrelated to 'PassportStatic'.


==== tests/cases/compiler/passport.d.ts (0 errors) ====
    declare module 'passport' {
        namespace passport {
            interface Passport {
                use(): this;
            }
    
            interface PassportStatic extends Passport {
                Passport: {new(): Passport};
            }
        }
    
        const passport: passport.PassportStatic;
        export = passport;
    }
    
==== tests/cases/compiler/test.ts (1 errors) ====
    import * as passport from "passport";
    import { Passport } from "passport";
    
    let p: Passport = passport.use();
        ~
!!! error TS2322: Type 'PassportStatic' is not assignable to type 'Passport'.
!!! error TS2322:   The types returned by 'use()' are incompatible between these types.
!!! error TS2322:     Type 'PassportStatic' is not assignable to type 'this'.
!!! error TS2322:       'this' could be instantiated with an arbitrary type which could be unrelated to 'PassportStatic'.